# search_engine

./: Dockerfile.webpack  README.md  db.sqlite3  pyproject.toml  run_with_reload.sh  run_with_reload_prod.sh  test.html  webpack.config.js
optimized/search_engine_app/static/js/: services.js
optimized/search_engine_app/templates/: index.html  search.html
search_engine/: settings.py  urls.py
search_engine_app/: urls.py  views.py
search_engine_app/static/js/: services.js
search_engine_app/templates/: index.html  search.html
